Fixed an issue and changed scrollbar color

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,18 @@
   font-family: "Poppins", sans-serif;
   color: #00171f;
 }
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #81caff;
+}
+
 *::before,
 *::after {
   transition: 0.5s;
